// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-16rjzd5 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-16rjzd5"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-vi1vpc {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="vertical"
    class="eoti1h20 cache-vi1vpc"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-wcz6bq {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #4f0599;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-wcz6bq"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-af582b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1ss6vr3 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1li914x {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1li914x.cache-1li914x {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-af582b"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-1ss6vr3"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1li914x"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-1ss6vr3"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-af582b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1ss6vr3 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1li914x {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1li914x.cache-1li914x {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-af582b"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-1ss6vr3"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1li914x"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-1ss6vr3"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-1q45jh2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-kx4hym {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1li914x {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1li914x.cache-1li914x {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="vertical"
    class="eoti1h21 cache-1q45jh2"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-kx4hym"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1li914x"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-kx4hym"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-2x6il1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-2x6il1"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-16rjzd5 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-16rjzd5"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with raw color 1`] = `
<DocumentFragment>
  .cache-1wx7maw {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #121212;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1wx7maw"
    role="separator"
  />
</DocumentFragment>
`;
